
8.33  2020-02-11
  - Added EXPERIMENTAL humanize_bytes function to Mojo::Util. (kraih, coolo)
  - Updated Future::AsyncAwait requirement to 0.36 for better tests. (ilmari)

8.32  2020-01-18
  - Changed experimental -async flag to -async_await in Mojo::Base, because of a
    Perl quirk that Future::AsyncAwait can't handle itself.
  - Fixed a bug where the -async_await flag in Mojo::Base would not load
    Mojo::Promise.

8.31  2020-01-14
  - Added attr_is, attr_isnt, attr_like and attr_unlike methods to Test::Mojo.
    (pau4o)
  - Improved is_fresh method in Mojolicious::Static with support for weak etags.
    (ether)

8.30  2020-01-07
  - Switch from Future::AsyncAwait::Frozen to Future::AsyncAwait for async/await
    support.

8.29  2019-12-28
  - Improved async/await support to work in many more cases, such as WebSocket
    handlers.

8.28  2019-12-26
  - Added EXPERIMENTAL support for async/await (with -async Mojo::Base flag).
  - Added EXPERIMENTAL all_settled and any methods to Mojo::Promise.

8.27  2019-12-04
  - Added EXPERIMENTAL before_command hook.
  - Added EXPERIMENTAL scope_guard function to Mojo::Util.
  - Removed experimental status from context method in Mojo::Log.
  - Changed default MIME type of content_type method in Mojolicious::Types to
    application/octet-stream. (aitap)

8.26  2019-11-02
  - Removed deprecated slice method from Mojo::Collection.
  - Moved HTML entities from Mojo::Util into a separate file. (rage311)
  - Changed how the state of the event loop is determined in Mojo::Reactor::EV
    to be more consistent with Mojo::Reactor::Poll.

8.25  2019-09-29
  - Added curfile function to Mojo::File. (Grinnz)

8.24  2019-09-11
  - Added EXPERIMENTAL context method to Mojo::Log.
  - Added EXPERIMENTAL cleanup event to Mojo::IOLoop::Subprocess.
  - Added log helper to Mojolicious::Plugin::DefaultHelpers.
  - Improved log messages generated by Mojolicious to include request ids when
    possible.

8.23  2019-08-12