@@ -11,9 +11,9 @@ our @EXPORT_OK = ('b');
 # Turn most functions from Mojo::Util into methods
 my @UTILS = (
   qw(b64_decode b64_encode camelize decamelize gunzip gzip hmac_sha1_sum),
-  qw(html_unescape md5_bytes md5_sum punycode_decode punycode_encode quote),
-  qw(sha1_bytes sha1_sum slugify term_escape trim unindent unquote url_escape),
-  qw(url_unescape xml_escape xor_encode)
+  qw(html_unescape humanize_bytes md5_bytes md5_sum punycode_decode),
+  qw(punycode_encode quote sha1_bytes sha1_sum slugify term_escape trim),
+  qw(unindent unquote url_escape url_unescape xml_escape xor_encode)
 );
 for my $name (@UTILS) {
   my $sub = Mojo::Util->can($name);
@@ -196,6 +196,14 @@ Unescape all HTML entities in bytestream with L<Mojo::Util/"html_unescape">.
 
   # "%3Chtml%3E"
   b('&lt;html&gt;')->html_unescape->url_escape;
+
+=head2 humanize_bytes
+
+  $stream = $stream->humanize_bytes;
+
+Turn number of bytes into a simplified human readable format for bytestream with
+L<Mojo::Util/"humanize_bytes">. Note that this method is B<EXPERIMENTAL> and
+might change without warning!
 
 =head2 md5_bytes
 
